--- a/JoggerPantsWPF/JoggerPantsWPF.csproj
+++ b/JoggerPantsWPF/JoggerPantsWPF.csproj
@@ -11,6 +11,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
